Updated Api and implemented database
