# rest-service/src/main/java/org/openapitools/api/DocumentRepository.java
@@ -1,0 +1,12 @@
+package org.openapitools.api;
+
+import org.openapitools.model.Document;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+import java.util.UUID;
+
+@Repository
+public interface DocumentRepository extends JpaRepository <Document, UUID> {
+
+}
