# ui-service/api/index.ts
@@ -1,18 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * SWKOM
- * This is the specification of the required API endpoints for the SWKOM server.
- *
- * The version of the OpenAPI document: 1.0.11
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-export * from "./api";
-export * from "./configuration";
-
